# TSIGMA

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pyrightconfig.json  pytest.ini
alembic/: env.py
alembic/versions/: 000000000001_initial_schema.py  000000000002_listener_subsystem.py
docs/developers/: ANALYTICS_IMPLEMENTATION_GUIDE.md  API.md  ARCHITECTURE.md  ATSPM_FEATURE_CATALOG.md  AUDITING.md  CODING_GUIDELINES.md  DATABASE.md  DATABASE_FACADE_PATTERN.md  DATABASE_SCHEMA.md  DECODERS.md  HIGH_CONCURRENCY_POLLING.md  INGESTION.md  LISTENERS.md  MULTI_DATABASE_AGGREGATES.md  NOTIFICATIONS.md  REPORTS.md  SECURITY.md  STORAGE.md  STYLE_GUIDE.md  TESTING.md  UI.md  UI_ARCHITECTURE.md  VALIDATION.md  WATCHDOG.md
docs/users/: API_REFERENCE.md  BACKFILL_GUIDE.md  DEPLOYMENT.md  EVENT_CODES.md  FTP_POLLING_GUIDE.md  LARGE_SCALE_POLLING.md  METRICS.md  PRODUCTION_DEPLOYMENT.md  TESTING_WITHOUT_DATA.md  UI_QUICK_START.md
scripts/: ATSPM_backfill_pgsql.py  check_no_unjustified_suppressions.py  download_vendor_libs.sh
tests/: __init__.py  conftest.py
tests/integration/: README.md  __init__.py  conftest.py  test_api_signals.py  test_checkpoint_polymorphism.py  test_collector_e2e.py  test_database_facade_integration.py  test_database_init_integration.py  test_event_log_roundtrip.py  test_migration_integration.py  test_partition_management.py  test_signals_db_integration.py  test_wavetronix_advance_e2e.py
tests/unit/: test_access_policy_dependency.py  test_analytics_api.py  test_analytics_schemas.py  test_api_corridors.py  test_api_keys.py  test_api_reference.py  test_api_regions.py  test_api_reports.py  test_api_routes.py  test_app.py  test_approach_schemas.py  test_approaches_api.py  test_arrival_on_red.py  test_auth_dependencies.py  test_auth_models.py  test_auth_oauth2.py  test_auth_oidc.py  test_auth_passwords.py  test_auth_provisioning.py  test_auth_router.py  test_auth_schemas.py  test_auth_seed.py  test_auth_sessions.py  test_collection_api.py  test_collection_sdk.py  test_collection_sdk_type_dispatch.py  test_collector_service.py  test_config.py  test_config_resolver.py  test_content_negotiation.py  test_credential_redaction.py  test_crypto.py  test_csrf.py  test_cycle_aggregates.py  test_database_facade.py  test_database_init.py  test_decoder_asc3.py  test_decoder_auto.py  test_decoder_csv.py  test_decoder_maxtime.py  (+62 more)
tsigma/: app.py  config.py  config_resolver.py  crypto.py  dependencies.py  logging.py  main.py  middleware.py  rate_limiter.py  settings_service.py
tsigma/api/: __init__.py  ui.py
tsigma/auth/: __init__.py  api_keys.py  audit.py  (+10 more)
(+217 files in other folders)
